--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,10 @@
 
     <groupId>com.github.profilerx</groupId>
     <artifactId>duration</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <version>0.1.0</version>
+    <name>duration</name>
+    <description>duration profiler com.github.chunfulandu jar</description>
+    <url>https://github.com/chunfulandu/duration</url>
 
     <parent>
         <groupId>org.sonatype.oss</groupId>
@@ -15,13 +17,8 @@
         <version>8</version>
     </parent>
 
-    <name>duration</name>
-    <url>https://github.com/chunfulandu</url>
-    <description>dubbotest com.github.chunfulandu jar</description>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
         <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
     </properties>
 
@@ -72,6 +69,14 @@
             <id>release</id> <!-- 部署要用到 -->
             <build>
                 <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <source>8</source>
+                            <target>8</target>
+                        </configuration>
+                    </plugin>
                     <!-- Source -->
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
@@ -128,18 +133,5 @@
             </distributionManagement>
         </profile>
     </profiles>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>8</source>
-                    <target>8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
     
 </project>
