--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.profilerx</groupId>
-    <artifactId>duration</artifactId>
+    <groupId>com.github.chunfulandu</groupId>
+    <artifactId>duration-profiler</artifactId>
     <version>0.1.0</version>
     <name>duration</name>
     <description>duration profiler com.github.chunfulandu jar</description>
@@ -38,11 +38,6 @@
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
             <version>1.8.9</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.pfichtner</groupId>
-            <artifactId>durationformatter</artifactId>
-            <version>0.1.1</version>
         </dependency>
     </dependencies>
 
