--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.chunfulandu</groupId>
     <artifactId>duration-profiler</artifactId>
-    <version>0.1.0</version>
+    <version>0.2.0</version>
     <name>duration</name>
     <description>duration profiler com.github.chunfulandu jar</description>
     <url>https://github.com/chunfulandu/duration</url>
@@ -38,6 +38,11 @@
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
             <version>1.8.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.12</version>
         </dependency>
     </dependencies>
 
